Related fdo#33895 add some checks against NULL derefs

Change-Id: I9c62a063788a494125ce8dc27748ed66022f5c48
Reviewed-on: https://gerrit.libreoffice.org/4199
Reviewed-by: Miklos Vajna <vmiklos@suse.cz>
Tested-by: Miklos Vajna <vmiklos@suse.cz>
Reviewed-on: https://gerrit.libreoffice.org/4223